<resources>
    <string name="app_name">X-Gam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyApp</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuación</string>
    <string name="logros">Logros</string>
    <string name="rutinas">Rutinas</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="informe">Informe de Actividades</string>
    <string name="carrera">Modo Carrera</string>
    <string name="login">Inicio de Sesión</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="help">Ayuda e Información</string>
    <string name="registro">Registro</string>
    <string name="home">Inicio</string>
    <string name="Logros1">Fortalecimiento Muscular</string>
    <string name="Logros2">Estiramientos</string>
    <string name="Logros3">Aeróbicos</string>
    <string name="Rep10">10 Repeticiones</string>
    <string name="Rep30">30 Repeticiones</string>
    <string name="Rep60">60 Repeticiones</string>
    <string name="Rep100">100 Repeticiones</string>
    <string name="Rep200">200 Repeticiones</string>
    <string name="Help"><b>Ayuda:\n</b>La aplicación se compone de dos secciones principales, <b>Logros</b> y <b>Rutinas</b> en la primera puedes ver el acumulado de puntos que has obtenido, el nivel al que corresponden tus puntos de experiencia (XP) y los diferentes logros que has alcanzado con base a la cantidad de repeticiones de tus rutinas, mientras que en la sección de Rutinas puedes elegir entre las tres disponibles. Puedes interrumpir la rutina si así lo deseas, pero no obtendrás ningun punto ni se tomará en cuenta para alcanzar algún logro. También tendrás un tiempo de descanso entre cada ejercicio.\n\n
        <b>Recomendaciones:\n</b>
        La realización de los ejercicios se debe percibir esfuerzo, pero no dolor.\n\n
        A los 2 o 3 días de haber comenzado, puede existir alguna molesta muscular pero no debe ser intensa ni dolorosa. Si ocurren dolores o molestias intensas, se recomienda disminuir el número de ejercicios o aumentar el tiempo de descanso entre los ejercicios o el de los ciclos.  En el caso de que las molestias y los dolores continúen, el entrenamiento se debe suspender y la persona debe consultar con un médico. Si se llega a presentar algún síntoma como matero, dolor de pecho, desmayo o dificultad para respirar, también se deben suspender las actividades y consultar con un médico para dar seguimiento a la situación.</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>