<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logros"
            android:icon="@drawable/ic_logros"
            android:title="@string/logros" />
        <item
            android:id="@+id/nav_rutinas"
            android:icon="@drawable/ic_rutinas"
            android:title="@string/rutinas" />
        <item
            android:id="@+id/nav_recordatorios"
            android:icon="@drawable/ic_recordatorio"
            android:title="@string/recordatorios" />
        <item
            android:id="@+id/nav_informe"
            android:icon="@drawable/ic_informe"
            android:title="@string/informe" />
        <item
            android:id="@+id/nav_carrera"
            android:icon="@drawable/ic_carrera"
            android:title="@string/carrera" />
    </group>

</menu>