<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/nav_rutinas"
        android:name="com.example.menuprueba.ui.rutinas.RutinasFragment"
        android:label="@string/rutinas"
        tools:layout="@layout/fragment_rutinas" >

        <action
            android:id="@+id/action_nav_rutinas_to_flexibilidadFragment"
            app:destination="@id/nav_flexibilidadFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_logros"
        android:name="com.example.menuprueba.ui.logros.LogrosFragment"
        android:label="@string/logros"
        tools:layout="@layout/fragment_logros" />

    <fragment
        android:id="@+id/nav_recordatorios"
        android:name="com.example.menuprueba.ui.recordatorios.RecordatoriosFragment"
        android:label="@string/recordatorios"
        tools:layout="@layout/fragment_recordatorios" />
    <fragment
        android:id="@+id/nav_carrera"
        android:name="com.example.menuprueba.ui.carrera.CarreraFragment"
        android:label="Modo Carrera"
        tools:layout="@layout/fragment_carrera"/>
    <fragment
        android:id="@+id/nav_informe"
        android:name="com.example.menuprueba.ui.informe.InformeActividadesFragment"
        android:label="Informe de Actividades"
        tools:layout="@layout/fragment_informe_actividades"/>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.menuprueba.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_nav_rutinas"
            app:destination="@id/nav_rutinas" />
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.menuprueba.ui.auth.RegistrationFragment"
        android:label="@string/registro"
        tools:layout="@layout/fragment_registration" >
        <action
            android:id="@+id/action_registrationFragment_to_nav_rutinas"
            app:destination="@id/nav_rutinas" />
    </fragment>
    <fragment
        android:id="@+id/videosFragment"
        android:name="com.example.menuprueba.ui.rutinas.VideosFragment"
        android:label="Acción!!"
        tools:layout="@layout/fragment_videos" />
    <fragment
        android:id="@+id/nav_aerobicosFragment"
        android:name="com.example.menuprueba.ui.rutinas.AerobicosFragment"
        android:label="Aeróbicos"
        tools:layout="@layout/fragment_aerobicos" >
        <action
            android:id="@+id/action_nav_aerobicosFragment_to_nav_resistenciaFragment"
            app:destination="@id/nav_resistenciaFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_flexibilidadFragment"
        android:name="com.example.menuprueba.ui.rutinas.FlexibilidadFragment"
        android:label="Flexibilidad"
        tools:layout="@layout/fragment_flexibilidad" >
        <action
            android:id="@+id/action_nav_flexibilidadFragment_to_aerobicosFragment"
            app:destination="@id/nav_aerobicosFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_resistenciaFragment"
        android:name="com.example.menuprueba.ui.rutinas.ResistenciaFragment"
        android:label="Resistencia"
        tools:layout="@layout/fragment_resistencia" >
        <action
            android:id="@+id/action_nav_resistenciaFragment_to_nav_rutinas"
            app:destination="@id/nav_rutinas" />
    </fragment>


</navigation>